# serializer version: 1
# name: TestHierarchicalClustering.test_hierarchical[event-edit]
  patient_id
  1     1
  2     2
  3     4
  4     0
  5     3
  6     1
  7     0
  8     0
  9     0
  10    0
  Name: __HCLUSTERS__, dtype: Int32
# ---
# name: TestHierarchicalClustering.test_hierarchical[event-lcp]
  patient_id
  1     0
  2     0
  3     0
  4     0
  5     0
  6     0
  7     3
  8     4
  9     1
  10    2
  Name: __HCLUSTERS__, dtype: Int32
# ---
# name: TestHierarchicalClustering.test_hierarchical[interval-edit]
  patient_id
  1     1
  2     0
  3     1
  4     0
  5     4
  6     2
  7     1
  8     3
  9     1
  10    1
  Name: __HCLUSTERS__, dtype: Int32
# ---
# name: TestHierarchicalClustering.test_hierarchical[interval-lcp]
  patient_id
  1     0
  2     0
  3     0
  4     0
  5     0
  6     0
  7     4
  8     3
  9     2
  10    1
  Name: __HCLUSTERS__, dtype: Int32
# ---
# name: TestHierarchicalClustering.test_hierarchical[state-edit]
  patient_id
  1     0
  2     0
  3     1
  4     3
  5     0
  6     4
  7     2
  8     0
  9     0
  10    1
  Name: __HCLUSTERS__, dtype: Int32
# ---
# name: TestHierarchicalClustering.test_hierarchical[state-lcp]
  patient_id
  1     0
  2     0
  3     0
  4     0
  5     0
  6     0
  7     4
  8     3
  9     2
  10    1
  Name: __HCLUSTERS__, dtype: Int32
# ---
# name: TestHierarchicalClustering.test_hierarchical_on_trajectory_pool
  patient_id
  1     2
  2     0
  3     3
  4     1
  5     0
  6     0
  7     0
  8     1
  9     2
  10    3
  Name: __HCLUSTERS__, dtype: Int32
# ---
